feat(attachment): 重构业务附件列表并支持预览与备注
- 将附件表格改为横向列表，区分查看态与编辑态操作
- 支持多文件上传、上传进度和取消上传
- 支持图片及 PDF 在线预览
- 展示附件上传人和上传时间
- 增加业务附件备注及权限校验
- 新增业务附件备注字段迁移和相关自动化测试